Fix padding-x alignment issues properly on specific pages

--- a/themes/cp_theme_d10/css/page.css
+++ b/themes/cp_theme_d10/css/page.css
@@ -367,6 +367,10 @@ iframe {
   padding-left: 1rem;
   padding-right: 1rem;
   /*margin-bottom: 6rem;*/
+  .block:not(.block-system-main-block) {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
 
 /* Wide pages -- all content wide (1400px) */
